# dtu_mlops_project

./: .gcloudignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  data.dvc  pyproject.toml  report.html  tasks.py
.devcontainer/: devcontainer.json  post_create.sh
.dtu_mlops_project/: pyvenv.cfg
.dvc/: config
.github/workflows/: cml_data.yaml  codecheck.yaml  linting.yaml  tests.yaml
configs/: config.yaml  config_cpu.yaml  train.yaml
configs/callbacks/: early_stopping.yaml
configs/data/: fashion_mnist.yaml
configs/hparams_search/: wandb_sweep.yaml
configs/hydra/: default.yaml
configs/logger/: wandb.yaml  wandb_logger.md
configs/model/: c8.yaml  cnn.yaml
configs/paths/: default.yaml
configs/vertex_ai/: config_cpu.yaml
dockerfiles/: README.md  api.dockerfile  cloud.dockerfile  train.dockerfile  train_old.dockerfile
docs/: mkdocs.yaml
gcp/: cloudbuild.yaml  setup.md
models/: model.pth
notebooks/: onnx_visulization.ipynb
reports/: README.md
src/dtu_mlops_project/: api.py  apifile.py  data.py  drift_detection_api.py  evaluate.py  model.py  setup_check.py  train.py
tests/: README.md  data_drift_detection.py  drift_report.html  input_output_data.py  locustfile.py  production_input_output.csv  report.html  test_api.py  test_data.py  test_model.py
wandb/sweep-fgjxye38/: config-82rlyuwg.yaml  config-9eqcvyxv.yaml  config-vzhud3r9.yaml  config-ymkyq6mn.yaml  config-zpbyssuq.yaml
