[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "dtu_mlops_project"
version = "0.0.1"
description = "DTU machine learning operations project"
authors = [
  { name = "group80", email = "your@email.com" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.66.1",
    "dvc-gdrive>=3.0.1",
    "dvc-gs>=3.0.2",
    "escnn>=1.0.11",
    "evidently>=0.7.20",
    "fastapi==0.115.6",
    "gdown>=5.2.1",
    "h5py>=3.15.1",
    "httpx>=0.28.1",
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "lightning>=2.6.0",
    "locust>=2.43.1",
    "loguru>=0.7.3",
    "markdown>=3.10.1",
    "matplotlib>=3.10.8",
    "ml-dtypes>=0.4.1",
    "netron>=8.8.3",
    "onnx>=1.19.0",
    "onnxruntime>=1.23.2",
    "onnxscript>=0.5.0",
    "pandas>=2.3.3",
    "prometheus-client>=0.24.1",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.21",
    "rdkit>=2025.9.3",
    "rootutils>=1.0.7",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "torch==2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "typer==0.15.1",
    "uvicorn==0.34.0",
    "wandb>=0.23.1",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "mkdocs-material==9.7.1",
    "mkdocs==1.6.1",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "ruff==0.1.3",
    "mkdocstrings-python==1.12.2",
    "google-api-python-client>=2.187.0",
    "pytest-cov>=6.3.0",
    "mypy>=1.19.1",
  "pandas-stubs>=2.3.2",
  "types-requests>=2.32.0.20241016",
]

#[tool.uv]
#override-dependencies = [
#    "torch; sys_platform == 'never'",
#    "torchvision; sys_platform == 'never'",
#]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.mypy]
python_version = "3.12"
mypy_path = ["src"]
explicit_package_bases = true
ignore_missing_imports = true
install_types = true
non_interactive = true

[[tool.mypy.overrides]]
module = ["escnn.*", "evidently.*", "rootutils.*", "torchvision.*", "pandas"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*", "dtu_mlops_project.model", "dtu_mlops_project.data"]
ignore_errors = true

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]

[project.scripts]
train = "dtu_mlops_project.train:train"

[project.optional-dependencies]
geo = ["lie-learn==0.0.2"]
